# santa2023

./: .env  .gitignore  Dockerfile  Makefile  README.md  bot.py  clients.py  conf.py  db.py  enums.py  players.csv  pyproject.toml  setup.cfg  utils.py
src/: clients.py  conf.py  enums.py  main.py  utils.py
src/bot/: admin.py  base.py  enums.py  personal.py  utils.py
src/db/: db.py
