[tool.poetry]
name = "santa2023"
version = "0.1.0"
description = "secret santa bot for tatneft"
authors = ["Valiev T.M. <cptchunk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
attrs = "23.1.0"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
idna = "3.4"
psycopg2-binary = "2.9.5"
pyflakes = "3.1.0"
pytelegrambotapi = "4.7.1"
requests = "2.28.1"
urllib3 = "1.26.13"


[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
flake8-bugbear = "23.9.16"
flake8-builtins = "2.2.0"
flake8-commas = "2.1.0"
isort = "5.12.0"
mccabe = "0.7.0"
pep8-naming = "0.13.3"
pycodestyle = "2.11.1"
flake8-docstrings = "1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
